--- a/encoder_style_gan.ipynb
+++ b/encoder_style_gan.ipynb
@@ -6,7 +6,6 @@
       "name": "encoder-style gan ",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,23 +63,45 @@
       "metadata": {
         "id": "OHzNLU-N6v5k",
         "colab_type": "code",
-        "outputId": "c6d788a5-750f-4fb9-b554-edab00ce15a6",
+        "outputId": "4865b69b-3cb1-45e8-a78c-d3d0af7e2d54",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 236
         }
       },
       "source": [
         "!pip install --upgrade tqdm"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already up-to-date: tqdm in /usr/local/lib/python3.6/dist-packages (4.42.1)\n"
+            "Collecting tqdm\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/cd/80/5bb262050dd2f30f8819626b7c92339708fe2ed7bd5554c8193b4487b367/tqdm-4.42.1-py2.py3-none-any.whl (59kB)\n",
+            "\r\u001b[K     |█████▌                          | 10kB 32.7MB/s eta 0:00:01\r\u001b[K     |███████████                     | 20kB 1.8MB/s eta 0:00:01\r\u001b[K     |████████████████▋               | 30kB 2.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████▏         | 40kB 1.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▊    | 51kB 2.2MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 61kB 2.1MB/s \n",
+            "\u001b[?25hInstalling collected packages: tqdm\n",
+            "  Found existing installation: tqdm 4.28.1\n",
+            "    Uninstalling tqdm-4.28.1:\n",
+            "      Successfully uninstalled tqdm-4.28.1\n",
+            "Successfully installed tqdm-4.42.1\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "tqdm"
+                ]
+              }
+            }
+          },
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     },
